--- a/src/Nyar/Client/_Imports.razor
+++ b/src/Nyar/Client/_Imports.razor
@@ -7,3 +7,9 @@
 @using Microsoft.JSInterop
 @using Nyar.Client
 @using Nyar.Client.Shared
+@using Nyar.Shared.interfaces
+@using Nyar.Shared.interfaces.entities
+@using Blazor.Extensions.Canvas
+@using Blazor.Extensions
+@using Blazor.Extensions.Canvas.Canvas2D
+@using BlazorPro.BlazorSize
